// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Edititem/> has a valid snapshot 1`] = `
<div>
  <div
    className="modal"
    id="myModalsundefined"
    role="dialog"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <h4>
            Edit Item
          </h4>
          <button
            className="close"
            data-dismiss="modal"
            id="closeundefined"
            type="button"
          >
            ×
          </button>
        </div>
        <div
          className="modal-body"
        >
          <form
            className="register-form"
            id="edititem"
            method="POST"
            name="login_form"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              NEW ITEM NAME:
              <input
                className="form-control"
                id="name"
                name="name"
                onChange={[Function]}
                required={true}
                type="text"
                value={undefined}
              />
            </div>
            <div
              className="form-group"
            >
              NEW ITEM PRICE:
              <input
                className="form-control"
                id="price"
                min="0"
                name="price"
                onChange={[Function]}
                required={true}
                step="1"
                type="text"
                value={undefined}
              />
            </div>
            <button
              className="btn btn-info "
              type="submit"
            >
              Save Item
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Edititem/> renders the edit item form and submits data 1`] = `
<div>
  <div
    className="modal"
    id="myModalsundefined"
    role="dialog"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <h4>
            Edit Item
          </h4>
          <button
            className="close"
            data-dismiss="modal"
            id="closeundefined"
            type="button"
          >
            ×
          </button>
        </div>
        <div
          className="modal-body"
        >
          <form
            className="register-form"
            id="edititem"
            method="POST"
            name="login_form"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              NEW ITEM NAME:
              <input
                className="form-control"
                id="name"
                name="name"
                onChange={[Function]}
                required={true}
                type="text"
                value="apples"
              />
            </div>
            <div
              className="form-group"
            >
              NEW ITEM PRICE:
              <input
                className="form-control"
                id="price"
                min="0"
                name="price"
                onChange={[Function]}
                required={true}
                step="1"
                type="text"
                value="20"
              />
            </div>
            <button
              className="btn btn-info "
              type="submit"
            >
              Save Item
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Edititem/> renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditItem />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="modal"
        id="myModalsundefined"
        role="dialog"
      >
        <div
          className="modal-dialog"
        >
          <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h4>
                Edit Item
              </h4>
              <button
                className="close"
                data-dismiss="modal"
                id="closeundefined"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              <form
                className="register-form"
                id="edititem"
                method="POST"
                name="login_form"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  NEW ITEM NAME:
                  <input
                    className="form-control"
                    id="name"
                    name="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value={undefined}
                  />
                </div>
                <div
                  className="form-group"
                >
                  NEW ITEM PRICE:
                  <input
                    className="form-control"
                    id="price"
                    min="0"
                    name="price"
                    onChange={[Function]}
                    required={true}
                    step="1"
                    type="text"
                    value={undefined}
                  />
                </div>
                <button
                  className="btn btn-info "
                  type="submit"
                >
                  Save Item
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="modal-dialog"
        >
          <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h4>
                Edit Item
              </h4>
              <button
                className="close"
                data-dismiss="modal"
                id="closeundefined"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              <form
                className="register-form"
                id="edititem"
                method="POST"
                name="login_form"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  NEW ITEM NAME:
                  <input
                    className="form-control"
                    id="name"
                    name="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value={undefined}
                  />
                </div>
                <div
                  className="form-group"
                >
                  NEW ITEM PRICE:
                  <input
                    className="form-control"
                    id="price"
                    min="0"
                    name="price"
                    onChange={[Function]}
                    required={true}
                    step="1"
                    type="text"
                    value={undefined}
                  />
                </div>
                <button
                  className="btn btn-info "
                  type="submit"
                >
                  Save Item
                </button>
              </form>
            </div>
          </div>
        </div>,
        "className": "modal",
        "id": "myModalsundefined",
        "role": "dialog",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h4>
                Edit Item
              </h4>
              <button
                className="close"
                data-dismiss="modal"
                id="closeundefined"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              <form
                className="register-form"
                id="edititem"
                method="POST"
                name="login_form"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  NEW ITEM NAME:
                  <input
                    className="form-control"
                    id="name"
                    name="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value={undefined}
                  />
                </div>
                <div
                  className="form-group"
                >
                  NEW ITEM PRICE:
                  <input
                    className="form-control"
                    id="price"
                    min="0"
                    name="price"
                    onChange={[Function]}
                    required={true}
                    step="1"
                    type="text"
                    value={undefined}
                  />
                </div>
                <button
                  className="btn btn-info "
                  type="submit"
                >
                  Save Item
                </button>
              </form>
            </div>
          </div>,
          "className": "modal-dialog",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="modal-header"
              >
                <h4>
                  Edit Item
                </h4>
                <button
                  className="close"
                  data-dismiss="modal"
                  id="closeundefined"
                  type="button"
                >
                  ×
                </button>
              </div>,
              <div
                className="modal-body"
              >
                <form
                  className="register-form"
                  id="edititem"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW ITEM NAME:
                    <input
                      className="form-control"
                      id="name"
                      name="name"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    NEW ITEM PRICE:
                    <input
                      className="form-control"
                      id="price"
                      min="0"
                      name="price"
                      onChange={[Function]}
                      required={true}
                      step="1"
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save Item
                  </button>
                </form>
              </div>,
            ],
            "className": "modal-content",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Edit Item
                  </h4>,
                  <button
                    className="close"
                    data-dismiss="modal"
                    id="closeundefined"
                    type="button"
                  >
                    ×
                  </button>,
                ],
                "className": "modal-header",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Edit Item",
                  },
                  "ref": null,
                  "rendered": "Edit Item",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "×",
                    "className": "close",
                    "data-dismiss": "modal",
                    "id": "closeundefined",
                    "type": "button",
                  },
                  "ref": null,
                  "rendered": "×",
                  "type": "button",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <form
                  className="register-form"
                  id="edititem"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW ITEM NAME:
                    <input
                      className="form-control"
                      id="name"
                      name="name"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    NEW ITEM PRICE:
                    <input
                      className="form-control"
                      id="price"
                      min="0"
                      name="price"
                      onChange={[Function]}
                      required={true}
                      step="1"
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save Item
                  </button>
                </form>,
                "className": "modal-body",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="form-group"
                    >
                      NEW ITEM NAME:
                      <input
                        className="form-control"
                        id="name"
                        name="name"
                        onChange={[Function]}
                        required={true}
                        type="text"
                        value={undefined}
                      />
                    </div>,
                    <div
                      className="form-group"
                    >
                      NEW ITEM PRICE:
                      <input
                        className="form-control"
                        id="price"
                        min="0"
                        name="price"
                        onChange={[Function]}
                        required={true}
                        step="1"
                        type="text"
                        value={undefined}
                      />
                    </div>,
                    <button
                      className="btn btn-info "
                      type="submit"
                    >
                      Save Item
                    </button>,
                  ],
                  "className": "register-form",
                  "id": "edititem",
                  "method": "POST",
                  "name": "login_form",
                  "onSubmit": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "NEW ITEM NAME:",
                        <input
                          className="form-control"
                          id="name"
                          name="name"
                          onChange={[Function]}
                          required={true}
                          type="text"
                          value={undefined}
                        />,
                      ],
                      "className": "form-group",
                    },
                    "ref": null,
                    "rendered": Array [
                      "NEW ITEM NAME:",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "form-control",
                          "id": "name",
                          "name": "name",
                          "onChange": [Function],
                          "required": true,
                          "type": "text",
                          "value": undefined,
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "NEW ITEM PRICE:",
                        <input
                          className="form-control"
                          id="price"
                          min="0"
                          name="price"
                          onChange={[Function]}
                          required={true}
                          step="1"
                          type="text"
                          value={undefined}
                        />,
                      ],
                      "className": "form-group",
                    },
                    "ref": null,
                    "rendered": Array [
                      "NEW ITEM PRICE:",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "form-control",
                          "id": "price",
                          "min": "0",
                          "name": "price",
                          "onChange": [Function],
                          "required": true,
                          "step": "1",
                          "type": "text",
                          "value": undefined,
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Save Item",
                      "className": "btn btn-info ",
                      "type": "submit",
                    },
                    "ref": null,
                    "rendered": "Save Item",
                    "type": "button",
                  },
                ],
                "type": "form",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="modal"
          id="myModalsundefined"
          role="dialog"
        >
          <div
            className="modal-dialog"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h4>
                  Edit Item
                </h4>
                <button
                  className="close"
                  data-dismiss="modal"
                  id="closeundefined"
                  type="button"
                >
                  ×
                </button>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className="register-form"
                  id="edititem"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW ITEM NAME:
                    <input
                      className="form-control"
                      id="name"
                      name="name"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    NEW ITEM PRICE:
                    <input
                      className="form-control"
                      id="price"
                      min="0"
                      name="price"
                      onChange={[Function]}
                      required={true}
                      step="1"
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save Item
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="modal-dialog"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h4>
                  Edit Item
                </h4>
                <button
                  className="close"
                  data-dismiss="modal"
                  id="closeundefined"
                  type="button"
                >
                  ×
                </button>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className="register-form"
                  id="edititem"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW ITEM NAME:
                    <input
                      className="form-control"
                      id="name"
                      name="name"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    NEW ITEM PRICE:
                    <input
                      className="form-control"
                      id="price"
                      min="0"
                      name="price"
                      onChange={[Function]}
                      required={true}
                      step="1"
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save Item
                  </button>
                </form>
              </div>
            </div>
          </div>,
          "className": "modal",
          "id": "myModalsundefined",
          "role": "dialog",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h4>
                  Edit Item
                </h4>
                <button
                  className="close"
                  data-dismiss="modal"
                  id="closeundefined"
                  type="button"
                >
                  ×
                </button>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className="register-form"
                  id="edititem"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW ITEM NAME:
                    <input
                      className="form-control"
                      id="name"
                      name="name"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    NEW ITEM PRICE:
                    <input
                      className="form-control"
                      id="price"
                      min="0"
                      name="price"
                      onChange={[Function]}
                      required={true}
                      step="1"
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save Item
                  </button>
                </form>
              </div>
            </div>,
            "className": "modal-dialog",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="modal-header"
                >
                  <h4>
                    Edit Item
                  </h4>
                  <button
                    className="close"
                    data-dismiss="modal"
                    id="closeundefined"
                    type="button"
                  >
                    ×
                  </button>
                </div>,
                <div
                  className="modal-body"
                >
                  <form
                    className="register-form"
                    id="edititem"
                    method="POST"
                    name="login_form"
                    onSubmit={[Function]}
                  >
                    <div
                      className="form-group"
                    >
                      NEW ITEM NAME:
                      <input
                        className="form-control"
                        id="name"
                        name="name"
                        onChange={[Function]}
                        required={true}
                        type="text"
                        value={undefined}
                      />
                    </div>
                    <div
                      className="form-group"
                    >
                      NEW ITEM PRICE:
                      <input
                        className="form-control"
                        id="price"
                        min="0"
                        name="price"
                        onChange={[Function]}
                        required={true}
                        step="1"
                        type="text"
                        value={undefined}
                      />
                    </div>
                    <button
                      className="btn btn-info "
                      type="submit"
                    >
                      Save Item
                    </button>
                  </form>
                </div>,
              ],
              "className": "modal-content",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h4>
                      Edit Item
                    </h4>,
                    <button
                      className="close"
                      data-dismiss="modal"
                      id="closeundefined"
                      type="button"
                    >
                      ×
                    </button>,
                  ],
                  "className": "modal-header",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Edit Item",
                    },
                    "ref": null,
                    "rendered": "Edit Item",
                    "type": "h4",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "×",
                      "className": "close",
                      "data-dismiss": "modal",
                      "id": "closeundefined",
                      "type": "button",
                    },
                    "ref": null,
                    "rendered": "×",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <form
                    className="register-form"
                    id="edititem"
                    method="POST"
                    name="login_form"
                    onSubmit={[Function]}
                  >
                    <div
                      className="form-group"
                    >
                      NEW ITEM NAME:
                      <input
                        className="form-control"
                        id="name"
                        name="name"
                        onChange={[Function]}
                        required={true}
                        type="text"
                        value={undefined}
                      />
                    </div>
                    <div
                      className="form-group"
                    >
                      NEW ITEM PRICE:
                      <input
                        className="form-control"
                        id="price"
                        min="0"
                        name="price"
                        onChange={[Function]}
                        required={true}
                        step="1"
                        type="text"
                        value={undefined}
                      />
                    </div>
                    <button
                      className="btn btn-info "
                      type="submit"
                    >
                      Save Item
                    </button>
                  </form>,
                  "className": "modal-body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="form-group"
                      >
                        NEW ITEM NAME:
                        <input
                          className="form-control"
                          id="name"
                          name="name"
                          onChange={[Function]}
                          required={true}
                          type="text"
                          value={undefined}
                        />
                      </div>,
                      <div
                        className="form-group"
                      >
                        NEW ITEM PRICE:
                        <input
                          className="form-control"
                          id="price"
                          min="0"
                          name="price"
                          onChange={[Function]}
                          required={true}
                          step="1"
                          type="text"
                          value={undefined}
                        />
                      </div>,
                      <button
                        className="btn btn-info "
                        type="submit"
                      >
                        Save Item
                      </button>,
                    ],
                    "className": "register-form",
                    "id": "edititem",
                    "method": "POST",
                    "name": "login_form",
                    "onSubmit": [Function],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "NEW ITEM NAME:",
                          <input
                            className="form-control"
                            id="name"
                            name="name"
                            onChange={[Function]}
                            required={true}
                            type="text"
                            value={undefined}
                          />,
                        ],
                        "className": "form-group",
                      },
                      "ref": null,
                      "rendered": Array [
                        "NEW ITEM NAME:",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "form-control",
                            "id": "name",
                            "name": "name",
                            "onChange": [Function],
                            "required": true,
                            "type": "text",
                            "value": undefined,
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "input",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "NEW ITEM PRICE:",
                          <input
                            className="form-control"
                            id="price"
                            min="0"
                            name="price"
                            onChange={[Function]}
                            required={true}
                            step="1"
                            type="text"
                            value={undefined}
                          />,
                        ],
                        "className": "form-group",
                      },
                      "ref": null,
                      "rendered": Array [
                        "NEW ITEM PRICE:",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "form-control",
                            "id": "price",
                            "min": "0",
                            "name": "price",
                            "onChange": [Function],
                            "required": true,
                            "step": "1",
                            "type": "text",
                            "value": undefined,
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "input",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Save Item",
                        "className": "btn btn-info ",
                        "type": "submit",
                      },
                      "ref": null,
                      "rendered": "Save Item",
                      "type": "button",
                    },
                  ],
                  "type": "form",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
